# lab8

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.cpp
data/: data.txt
include/: http_server.h  request.h  singer.h
src/: http_server.cpp  request.cpp  singer.cpp
